# churon

./: .Rbuildignore  .Rhistory  .gitignore  404.html  AGENTS.html  AGENTS.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  authors.html  configure  configure.win  cran-comments.md  index.html  pkgdown.yml  sitemap.xml
.sisyphus/: ralph-loop.local.md
R/: error_handling_examples.R  extendr-wrappers.R  install.R  install_onnx_runtime.R  onnx_interface.R  s3_methods.R  zzz.R
articles/: creating-model-packages.html  index.html
inst/: WORDLIST
man/: RSession.Rd  batch_process_data.Rd  cash-.TensorInfo.Rd  check_onnx_runtime_available.Rd  churon-package.Rd  error_handling_examples.Rd  estimate_session_memory.Rd  find_model_path.Rd  get_onnx_runtime_info.Rd  get_session_performance_stats.Rd  install_onnx_runtime.Rd  install_onnxruntime.Rd  onnx_download_model.Rd  onnx_download_models.Rd  onnx_example_models.Rd  onnx_example_session.Rd  onnx_input_info.Rd  onnx_model_path.Rd  onnx_model_zoo_models.Rd  onnx_output_info.Rd  onnx_providers.Rd  onnx_run.Rd  onnx_runtime_is_installed.Rd  onnx_runtime_lib_path.Rd  onnx_session.Rd  onnxruntime_install_path.Rd  onnxruntime_is_installed.Rd  optimize_session_performance.Rd  safe_onnx_run.Rd  safe_onnx_session.Rd  setup_onnx_runtime.Rd
news/: index.html
reference/: batch_process_data.html  cash-.TensorInfo.html  check_onnx_runtime_available.html  churon-package.html  error_handling_examples.html  find_model_path.html  get_onnx_runtime_info.html  index.html  install_onnx_runtime.html  onnx_download_model.html  onnx_download_models.html  onnx_example_models.html  onnx_example_session.html  onnx_input_info.html  onnx_run.html  (+10 more)
src/rust/: Cargo.toml  vendor.tar.xz
src/rust/.devcontainer/: Dockerfile
src/rust/src/: lib.rs
(+33 files in other folders)
