[package]
name = 'churon'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'churon'

[dependencies]
extendr-api = { version = "0.4.0", features = ["ndarray"] }
ndarray = "0.15.6"
ort = { version = "1.15.0", default-features = false , features = [ "load-dynamic" ]}

[features]
ort-cuda = [ "ort/cuda" ]
ort-tensorrt = [ "ort/tensorrt" ]
ort-directml = [ "ort/directml" ]
ort-onednn = [ "ort/onednn" ]
ort-coreml = [ "ort/coreml" ]


