[package]
name = 'churon'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'churon'

[dependencies]
extendr-api = { version = "0.8.1", features = ["ndarray"] }
ndarray = "0.17.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }

[features]
default = []
ort-cuda = ["ort/cuda"]
ort-tensorrt = ["ort/tensorrt"]
ort-directml = ["ort/directml"]
ort-onednn = ["ort/onednn"]
ort-coreml = ["ort/coreml"]
ort-rocm = ["ort/rocm"]
ort-openvino = ["ort/openvino"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"


